# ga-lecture

./: hello.yml  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py  urls.py
web/: test_tests.py  views.py
