[project]
name = "ga-lecture"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.17.1",
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
django_find_project = true
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
